data/derived/fa15/progs/unify/prog3787.ml.out
Characters 100-102:
  | Sine sine		    -> ""^sin(pi*eval(sine,x,y))
                             ^^
Error: This expression has type float but an expression was expected of type
         int
